language/move-lang/tests/move_check/parser/address_too_long_decimal_exp.move
// Addresses are at most 16 bytes long.
script {
    fun main() {
        let x = @340282366920938463463374607431768211456;
    }
}
